--- a/walkthroughs/skupper/walkthrough.adoc
+++ b/walkthroughs/skupper/walkthrough.adoc
@@ -1,7 +1,7 @@
 :skupper-name: Skupper
 :skupper_cli_release: 0.2.0
 :west-cluster: Managed Integration
-:west-namespace: pass:q[*{walkthrough-namespace}*]
+:west-namespace: {project-namespace}
 :west-cli: oc
 :east-cluster: CodeReady Containers
 :east-namespace: pass:q[*crc*]
@@ -15,24 +15,23 @@ Securely enable communications across OpenShift clusters.
 
 This Solution Pattern uses an HTTP Hello World application with a frontend service and a backend service.  
 The frontend uses the backend to process requests.
-The frontend is deployed in the {west-namespace} namespace of the {west-cluster} cluster, and the backend is deployed in the {east-namespace} namespace of a {east-cluster} cluster.
+The frontend is deployed in the *{west-namespace}* namespace of the {west-cluster} cluster, and the backend is deployed in the *{east-namespace}* namespace of a {east-cluster} cluster.
 
 image::https://skupper.io/images/hello-world-entities.svg[]
 
-While these instructions use this particular application for demonstration purposes, the steps are the same for any {skupper-name}
+While these instructions use this particular application for demonstration purposes, the steps are the same for any Skupper
 deployment.
 
 .Prerequisites
 
-You must have `oc` installed
+* You must have `oc` installed
 
-This Solution Pattern assumes you have link:{east-docs-link}[east-cluster] installed and running.  
-
-However, {skupper-name} works with any flavor of Kubernetes.  
+* This Solution Pattern assumes you have link:{east-docs-link}[{east-cluster}] installed on your local machine, however, Skupper works with any flavor of Kubernetes.  
 
 [type=walkthroughResource]
-.{skupper-name}
+.Skupper
 ****
+* https://skupper.io[Skupper Website]
 * https://github.com/skupperproject/skupper-example-hello-world[HTTP Hello World example code]
 * https://github.com/skupperproject/skupper-example-tcp-echo[TCP-based service example code]
 * link:https://skupper.io/examples/index.html[Explore the examples]
@@ -48,14 +47,14 @@ However, {skupper-name} works with any flavor of Kubernetes.
 :sectnums:
 
 [time=5]
-== Install the {skupper-name} command-line tool in your environment
+== Install the Skupper command-line tool in your environment
 
 The `skupper` command-line tool is the primary entrypoint for
-installing and configuring the {skupper-name} infrastructure. 
+installing and configuring the Skupper infrastructure. 
 
 === Download and extract the command
 
-To get the latest release of the {skupper-name} command for your platform,
+To get the latest release of the Skupper command for your platform,
 download it from GitHub and extract the executable using `tar` or
 `unzip`.
 
@@ -70,7 +69,7 @@ macOS
 This produces an executable file named `skupper` in your current
 directory.
 
-See the https://github.com/skupperproject/skupper-cli/releases[{skupper-name} CLI release
+See the https://github.com/skupperproject/skupper-cli/releases[Skupper CLI release
 page] to get
 artifacts for other platforms.
 
@@ -94,7 +93,7 @@ should see output like this:
 [time=5]
 == Configure access to multiple namespaces
 
-{skupper-name} is designed for use with multiple namespaces, typically on
+Skupper is designed for use with multiple namespaces, typically on
 different clusters.  The `skupper` command uses your kubeconfig and
 current context to select the namespace where it operates.
 
@@ -152,7 +151,7 @@ Start a terminal session for each of your namespaces.  Set the
 
 [type=verification]
 ****
-Check your configurations
+Do the following commands display the expected output?
 
 Once you have logged in and set the current namespaces, use the
 `skupper status` command to check that each namespace is correctly
@@ -170,11 +169,14 @@ configured.
 
 ****
 
+[type=verificationFail]
+Try the steps again. If it's still not working contact your administrator.
+
 
 [time=5]
-== Install the {skupper-name} router in each namespace
+== Install the Skupper router in each namespace
 
-The `skupper init` command installs the {skupper-name} router in the current
+The `skupper init` command installs the Skupper router in the current
 namespace.
 
 === Install the router in both namespaces
@@ -184,7 +186,7 @@ namespace.
 [subs="attributes+"]
 ----
  $ skupper init
- {skupper-name} is now installed in namespace '{west-namespace}'.  Use 'skupper status' to get more information.
+ Skupper is now installed in namespace '{west-namespace}'.  Use 'skupper status' to get more information.
 ----
 
 . In the terminal for the {east-cluster}:
@@ -192,11 +194,11 @@ namespace.
 [subs="attributes+"]
 ----
  $ skupper init --edge
- {skupper-name} is now installed in namespace '{east-namespace}'.  Use 'skupper status' to get more information.
+ Skupper is now installed in namespace '{east-namespace}'.  Use 'skupper status' to get more information.
 ----
 
 Using the `--edge` argument in the {east-namespace} namespace disables network ingress at the
-{skupper-name} router layer. 
+Skupper router layer. 
 
 
 [time=5]
@@ -233,17 +235,17 @@ If the connection is made, you should see the following output:
 West
 
  $ skupper status
- {skupper-name} enabled for namespace 'west'. It is connected to 1 other site.
+ Skupper enabled for namespace 'west'. It is connected to 1 other site.
 
 East
 
  $ skupper status
- {skupper-name} enabled for namespace 'east'. It is connected to 1 other site.
+ Skupper enabled for namespace 'east'. It is connected to 1 other site.
 
 [time=5]
 == Expose your services
 
-You now have a {skupper-name} network capable of multi-cluster communication,
+You now have a Skupper network capable of multi-cluster communication,
 but no services are attached to it.  This step uses the `skupper
 expose` command to make a Kubernetes deployment on one namespace
 available on all the connected namespaces.
@@ -332,7 +334,7 @@ Ordinarily, a multi-cluster deployment of this sort means that the
 services have no way to communicate unless they are exposed to the
 public internet.
 
-By introducing {skupper-name} into each namespace, we were able to create a
+By introducing Skupper into each namespace, we were able to create a
 virtual application network that connects the services across cluster
 boundaries.
 
@@ -340,29 +342,3 @@ See the https://github.com/skupperproject/skupper-example-hello-world/blob/maste
 example]
 for more detail.
 
-
-== Cleaning up
-
-To remove {skupper-name} and the other resources from this exercise, use
-the following commands:
-
-West
-
- skupper delete
- kubectl delete service/hello-world-frontend
- kubectl delete deployment/hello-world-frontend
-
-East
-
- skupper delete
- kubectl delete deployment/hello-world-backend
-
-
-
-[type=verification]
-====
-Did it work?
-====
-
-[type=verificationFail]
-Try the steps again. If it's still not working contact your administrator.
