--- a/modules/ROOT/pages/_partials/walkthrough.adoc
+++ b/modules/ROOT/pages/_partials/walkthrough.adoc
@@ -1,12 +1,3 @@
-:skupper-name: Skupper
-:skupper_cli_release: 0.2.0
-:west-cluster: Managed Integration
-:west-namespace: {project-namespace}
-:west-cli: oc
-:east-cluster: CodeReady Containers
-:east-namespace: crc
-:east-docs-link: https://code-ready.github.io/crc/
-:east-cli: oc
 
 = Communicating with another cluster using Skupper
 
@@ -17,7 +8,10 @@ This Solution Pattern uses an HTTP Hello World application with a frontend servi
 The frontend uses the backend to process requests.
 The frontend is deployed in the *{west-namespace}* namespace of the {west-cluster} cluster, and the backend is deployed in the *{east-namespace}* namespace of a {east-cluster} cluster.
 
-image::https://skupper.io/images/hello-world-entities.svg[]
+[plantuml, Overview, svg,subs="attributes+"]
+....
+include::overview.uml[]
+....
 
 While these instructions use this particular application for demonstration purposes, the steps are the same for any Skupper
 deployment.
