--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,3 +1,5 @@
+//generic text - never gets published as walkthrough
+
 include::_partials/attributes.adoc[]
 
-include::_partials/walkthrough.adoc[]
+include::_partials/walkthrough-body.adoc[]
